--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -23,11 +23,15 @@ block.returret-ore-mithril.name = Mithril Ore
 ## Crafting
 block.returret-explantion.name = Explantion
 block.returret-explantion.description = Mixing the Titanium, Mithril and Water into Liquid of Mithril
+block.returret-aft1.name = AFT 1
+block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
 
 # Other
 ## Items
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = The dark material to create Coolant and [orange]Heavy ammo
+item.returret-heavy-ammo1.name = Heavy Ammo T1
+item.returret-heavy-ammo1.description = Heavy ammo Tier 1. Incrased basic turret Damage
 
 ## Liquids
 liquid.returret-liquid-mithril.name = Liquid of Mithril
