--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -21,10 +21,10 @@ liquid.returret-.description =
 block.returret-ore-mithril.name = Mithril Ore
 
 ## Crafting
-block.returret-explantion.name = Explantion
+block.returret-explantion.name = Shadow Mixer
 block.returret-explantion.description = Mixing Titanium, Mithril and Water into Mithril Liquid
 block.returret-aft1.name = AFT 1
-block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
+block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier
 
 # Other
 ## Items
@@ -35,4 +35,4 @@ item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases base 
 
 ## Liquids
 liquid.returret-liquid-mithril.name = Mithril Liquid
-liquid.returret-liquid-mithril.description = A Coolant to Cool the Turret
+liquid.returret-liquid-mithril.description = A Coolant to Cool the Turret, The dark energy added to the cold aura which caused the liquid to become extremely cold
