--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -21,8 +21,8 @@ liquid.returret-.description =
 block.returret-ore-mithril.name = Mithril Ore
 
 ## Crafting
-block.returret-explantion.name = Shadow Mixer
-block.returret-explantion.description = Mixing Titanium, Mithril and Water into Mithril Liquid
+block.returret-shadow-mixer.name = Shadow Mixer
+block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier
 
