--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -16,6 +16,8 @@ liquid.returret-.description =
 
 # Blocks
 ## Turret
+block.returret-small-gun.name = Small Gun
+block.returret-small-gun.description = Like Salvo turret but high quality
 
 ## Extend
 block.returret-ore-mithril.name = Mithril Ore
