--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -17,24 +17,24 @@ liquid.returret-.description =
 # Blocks
 ## Turret
 block.returret-small-gun.name = Small Gun
-block.returret-small-gun.description = Like Salvo turret but high quality
+block.returret-small-gun.description = Like Salvo turret but high quality.
 
-## Extend
+## Editor
 block.returret-ore-mithril.name = Mithril Ore
 
 ## Crafting
 block.returret-shadow-mixer.name = Shadow Mixer
-block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid
+block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid.
 block.returret-aft1.name = AFT 1
-block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier
+block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
 
 # Other
 ## Items
 item.returret-mithril.name = Mithril
-item.returret-mithril.description = Dark material for making Coolant and [orange] Heavy ammo
+item.returret-mithril.description = Dark material for making Coolant and [orange] Heavy ammo.
 item.returret-heavy-ammo1.name = Heavy Ammo T1
-item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases base turret damage
+item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases base turret damage.
 
 ## Liquids
 liquid.returret-liquid-mithril.name = Mithril Liquid
-liquid.returret-liquid-mithril.description = A Coolant to Cool the Turret, The dark energy added to the cold aura which caused the liquid to become extremely cold
+liquid.returret-liquid-mithril.description = A Coolant to Cool the Turret, The dark energy added to the cold aura which caused the liquid to become extremely cold.
