--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -18,6 +18,8 @@ liquid.returret-.description =
 ## Turret
 block.returret-small-gun.name = Small Gun
 block.returret-small-gun.description = Like Salvo turret but high quality.
+block.returret-medium-gun.name = Medium Gun
+block.returret-medium-gun.description = Shoots bullets with very accurate accuracy.
 
 ## Editor
 block.returret-ore-mithril.name = Mithril Ore
@@ -27,13 +29,17 @@ block.returret-shadow-mixer.name = Shadow Mixer
 block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid.
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
+block.returret-aft1.name = AFT 2
+block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
 
 # Other
 ## Items
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = Dark material for making Coolant and [orange] Heavy ammo.
 item.returret-heavy-ammo1.name = Heavy Ammo T1
-item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases base turret damage.
+item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases small turret damage.
+item.returret-heavy-ammo1.name = Heavy Ammo T2
+item.returret-heavy-ammo1.description = Tier 2 heavy ammunition. Increases medium turret damage.
 
 ## Liquids
 liquid.returret-liquid-mithril.name = Mithril Liquid
