--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -27,6 +27,10 @@ block.returret-ore-mithril.name = Mithril Ore
 ## Crafting
 block.returret-shadow-mixer.name = Shadow Mixer
 block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid.
+block.returret-lava-extractor.name = Lava Extractor
+block.returret-lava-extractor.description = Converting Lava rock into molten Lava
+
+### AFT
 block.returret-aft1.name = AFT 1
 block.returret-aft1.description = AFT stands for Ammo Factory Tier, producing an ammo with each Tier.
 block.returret-aft2.name = AFT 2
@@ -36,11 +40,15 @@ block.returret-aft2.description = AFT stands for Ammo Factory Tier, producing an
 ## Items
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = Dark material for making Coolant and [orange] Heavy ammo.
+item.returret-lava-stone.name = Lava Stone
+item.returret-lava-stone.description = Hot Stone
+
+### Heavy Ammo
 item.returret-heavy-ammo1.name = Heavy Ammo T1
 item.returret-heavy-ammo1.description = Tier 1 heavy ammunition. Increases small turret damage.
 item.returret-heavy-ammo2.name = Heavy Ammo T2
 item.returret-heavy-ammo2.description = Tier 2 heavy ammunition. Increases medium turret damage.
 
-## Liquids
+## Liquids/Fluids
 liquid.returret-liquid-mithril.name = Mithril Liquid
 liquid.returret-liquid-mithril.description = A Coolant to Cool the Turret, The dark energy added to the cold aura which caused the liquid to become extremely cold.
