--- a/bundles/bundle.properties
+++ b/bundles/bundle.properties
@@ -27,7 +27,7 @@ block.returret-ore-mithril.name = Mithril Ore
 ## Crafting
 block.returret-shadow-mixer.name = Shadow Mixer
 block.returret-shadow-mixer.description = Mixing Titanium, Mithril and Water into Mithril Liquid.
-block.returret-lava-extractor.name = Lava Extractor
+block.returret-lava-extractor.name = Slag Extractor
 block.returret-lava-extractor.description = Converting Lava rock into molten Lava
 
 ### AFT
@@ -41,7 +41,7 @@ block.returret-aft2.description = AFT stands for Ammo Factory Tier, producing an
 item.returret-mithril.name = Mithril
 item.returret-mithril.description = Dark material for making Coolant and [orange] Heavy ammo.
 item.returret-lava-stone.name = Lava Stone
-item.returret-lava-stone.description = Hot Stone
+item.returret-lava-stone.description = This is hot stone
 
 ### Heavy Ammo
 item.returret-heavy-ammo1.name = Heavy Ammo T1
